<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edNameProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:background="@drawable/rouned_edittext"
        android:hint="@string/example_ed"
        android:imeOptions="actionDone"
        android:padding="@dimen/margin16dp"
        android:textSize="@dimen/text14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:text="@string/choose_color"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text18sp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:background="@android:color/white"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:background="@drawable/rouned_edittext"
        android:hint="@string/example_ed"
        android:imeOptions="actionDone"
        android:lines="3"
        android:padding="@dimen/margin16dp"
        android:textSize="@dimen/text14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24dp"
        android:gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin16dp"
            android:background="@drawable/button_app"
            android:text="@string/ok"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>